// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-random should implement random correctly 1`] = `"kQAjaf-vgxov1tQia2T377gOzOh3xcMKVOLV0jR0N-7s02TD"`;

exports[`feature-random should implement random correctly 2`] = `"kQCZUUfYZTPQEMSK6GefNZV1EfF58HqlD8T9tG_LSDKCS_JC"`;

exports[`feature-random should implement random correctly 3`] = `"kQCGP44hFU3jyQwnFr2rRW8OshuOVwXYcQQt1Ti4TZ9gBhTb"`;

exports[`feature-random should implement random correctly 4`] = `
[
  {
    "type": "deploy",
  },
  {
    "message": {
      "body": {
        "text": "Message",
        "type": "text",
      },
      "bounce": true,
      "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
      "to": "kQAjaf-vgxov1tQia2T377gOzOh3xcMKVOLV0jR0N-7s02TD",
      "type": "internal",
      "value": 10000000000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 22507n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "text": "Message",
          "type": "text",
        },
        "bounce": true,
        "from": "kQAjaf-vgxov1tQia2T377gOzOh3xcMKVOLV0jR0N-7s02TD",
        "to": "kQCZUUfYZTPQEMSK6GefNZV1EfF58HqlD8T9tG_LSDKCS_JC",
        "type": "internal",
        "value": 9962528000n,
      },
    ],
    "type": "sent",
  },
]
`;

exports[`feature-random should implement random correctly 5`] = `
[
  {
    "type": "deploy",
  },
  {
    "message": {
      "body": {
        "text": "Message",
        "type": "text",
      },
      "bounce": true,
      "from": "kQAjaf-vgxov1tQia2T377gOzOh3xcMKVOLV0jR0N-7s02TD",
      "to": "kQCZUUfYZTPQEMSK6GefNZV1EfF58HqlD8T9tG_LSDKCS_JC",
      "type": "internal",
      "value": 9962528000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 20335n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "text": "Message",
          "type": "text",
        },
        "bounce": true,
        "from": "kQCZUUfYZTPQEMSK6GefNZV1EfF58HqlD8T9tG_LSDKCS_JC",
        "to": "kQCGP44hFU3jyQwnFr2rRW8OshuOVwXYcQQt1Ti4TZ9gBhTb",
        "type": "internal",
        "value": 9932400000n,
      },
    ],
    "type": "sent",
  },
]
`;

exports[`feature-random should implement random correctly 6`] = `
[
  {
    "type": "deploy",
  },
  {
    "message": {
      "body": {
        "text": "Message",
        "type": "text",
      },
      "bounce": true,
      "from": "kQCZUUfYZTPQEMSK6GefNZV1EfF58HqlD8T9tG_LSDKCS_JC",
      "to": "kQCGP44hFU3jyQwnFr2rRW8OshuOVwXYcQQt1Ti4TZ9gBhTb",
      "type": "internal",
      "value": 9932400000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 20103n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "text": "Message2",
          "type": "text",
        },
        "bounce": true,
        "from": "kQCGP44hFU3jyQwnFr2rRW8OshuOVwXYcQQt1Ti4TZ9gBhTb",
        "to": "kQCGP44hFU3jyQwnFr2rRW8OshuOVwXYcQQt1Ti4TZ9gBhTb",
        "type": "internal",
        "value": 9902496000n,
      },
    ],
    "type": "sent",
  },
  {
    "message": {
      "body": {
        "text": "Message2",
        "type": "text",
      },
      "bounce": true,
      "from": "kQCGP44hFU3jyQwnFr2rRW8OshuOVwXYcQQt1Ti4TZ9gBhTb",
      "to": "kQCGP44hFU3jyQwnFr2rRW8OshuOVwXYcQQt1Ti4TZ9gBhTb",
      "type": "internal",
      "value": 9902496000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 4338n,
    "type": "processed",
  },
]
`;
